# rust-library

./: .gitignore  .prettierrc.js  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-dependencies.yml  code-quality-check.yml  main.yml  new-pr-to-main.yaml  releae.yaml  release.yml
docs/: update_claude_prompt.md
legend-saga/: Cargo.toml
legend-saga/src/: commence_saga.rs  connection.rs  consumers.rs  emitter.rs  events.rs  events_consume.rs  fibo.rs  lib.rs  my_delivery.rs  nack.rs  publish_event.rs  queue_consumer_props.rs  saga.rs  start.rs  test.rs
my-awesome-rabbitmq-lib/: Cargo.toml
my-awesome-rabbitmq-lib/src/: commence_saga.rs  connection.rs  consumers.rs  events.rs  events_consume.rs  fibo.rs  lib.rs  nack.rs  publish_event.rs  queue_consumer_props.rs  saga.rs  start.rs  test.rs
playground/: Cargo.toml  backoff.rs  bus.rs  event_bus.rs  generic_event_bus.rs  publish.rs  transaccional.rs  validator.rs
scripts/: publish.sh  test.sh
scripts/prettier/: compose.prettier.yml  prettier.Dockerfile
