[package]
name = "legend-saga"
version = "0.0.15"
edition = "2021"
description = "A Rust library for working with RabbitMQ and asynchronous operations"
authors = ["Jorge Clavijo <jym272@gmail.com>"]
license = "MIT"
repository = "https://github.com/legendaryum-metaverse/rust-library"
readme = "../README.md"
keywords = ["rabbitmq", "async", "messaging"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["events", "std"]
events = ["serde", "strum", "strum_macros", "chrono"]
std = ["lapin", "tokio", "futures-lite", "thiserror", "serde_json", "tracing", "backoff", "once_cell"]

[dependencies]
lapin = { version = "2.5.0", optional = true }
tokio = { version = "1.41.1", features = ["sync", "rt"] , optional = true}
futures-lite = { version = "2.5.0", default-features = false, features = ["alloc"], optional = true }
thiserror = { version = "2.0", optional = true }
serde = { version = "1.0",  default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1.41", default-features = false, features = ["std"], optional = true  }
backoff = { version = "0.4.0", features = ["tokio"], optional = true  }
strum = { version = "0.26.3", default-features = true, optional = true }
strum_macros = { version = "0.26.4", optional = true }
once_cell = { version = "1.20.2", optional = true }
chrono = { version = "0.4.38", default-features = false, features = ["serde"], optional = true }

[dev-dependencies]
ctor = "0.2.9"
rand = "0.8.5"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
