[package]
name = "legend-saga"
version = "0.0.33"
edition = "2021"
description = "A Rust library for working with RabbitMQ and asynchronous operations"
authors = ["Jorge Clavijo <jym272@gmail.com>"]
license = "MIT"
repository = "https://github.com/legendaryum-metaverse/rust-library"
readme = "../README.md"
keywords = ["rabbitmq", "async", "messaging"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["events", "std"]
events = ["serde", "strum", "strum_macros", "chrono"]
std = ["lapin", "tokio", "futures-lite", "thiserror", "serde_json", "tracing", "backoff", "once_cell"]

[dependencies]
# Versión 3 elimina la api de topology, se sigue en https://legendaryum.atlassian.net/browse/LE-3503
lapin = { version = "=2.5.3", optional = true }
tokio = { version = "1.47.1", features = ["sync", "rt"] , optional = true}
futures-lite = { version = "2.6.1", default-features = false, features = ["alloc"], optional = true }
thiserror = { version = "2.0", optional = true }
serde = { version = "1.0",  default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tracing = { version = "0.1.41", default-features = false, features = ["std"], optional = true  }
backoff = { version = "0.4.0", features = ["tokio"], optional = true  }
strum = { version = "0.27.2", default-features = true, optional = true }
strum_macros = { version = "0.27.2", optional = true }
once_cell = { version = "1.21.3", optional = true }
chrono = { version = "0.4.41", default-features = false, features = ["serde"], optional = true }

[dev-dependencies]
ctor = "0.5.0"
rand = "0.9.2"
tracing-subscriber = "0.3.20"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
