[package]
name = "my-awesome-rabbitmq-lib"
version = "0.1.6"
edition = "2021"
description = "A Rust library for working with RabbitMQ and asynchronous operations"
authors = ["Jorge Clavijo <jym272@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-library"  # Replace with your actual repository URL
readme = "../README.md"
keywords = ["rabbitmq", "async", "messaging"]
categories = ["asynchronous", "network-programming"]

[dependencies]
lapin = "2.5.0"
tokio = { version = "1.40.0", features = ["full"] }
futures-lite = "2.3.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
backoff = { version = "0.4.0", features = ["tokio"] }
strum_macros = "0.26.4"
strum = "0.26.3"

[dev-dependencies]
ctor = "0.2.8"
rand = "0.8.5"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
